<resources>
    <string name="app_name">Boda Shops</string>
    <!--MainActivity-->
    <string name="HomeLbl">Home</string>
    <string name="ItemsLbl">Items</string>
    <string name="OrdersLbl">Orders</string>
    <string name="AccountsLbl">Accounts</string>
    <string name="NotificationsLbl">Notifications</string>


    <!--ItemsActivity-->
    <string name="AllProductsLbl">All Products</string>
    <string name="AddNewProductLbl">Add New Product</string>

    <!--productList-->
    <string name="tvHolder">Product</string>

    <!--main menu options-->
    <string name="orders">Orders</string>
    <string name="items">Items</string>
    <string name="notifications">Notifications</string>

    <!--Drawer menu options-->
    <string name="myAccount">My Account</string>
    <string name="shopDetails">Shop details</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_orders_fragment">Hello orders fragment</string>
    <string name="hello_items_fragment">Hello items fragment</string>
    <string name="hello_notifications_fragment">Hello notifications fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="types_prompt">Choose a type</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

</resources>
