<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/menutop"
        android:checkableBehavior="single">
        <item
            android:id="@+id/ordersmenu"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="Orders" />
        <item
            android:id="@+id/itemsmenu"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="Items" />
        <item
            android:id="@+id/notificationsmenu"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="Notifications" />
    </group>

    <group
        android:id="@+id/menubtm"
        android:checkableBehavior="none">
        <item
            android:id="@+id/myAccount"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/myAccount" />
        <item
            android:id="@+id/shopDetails"
            android:icon="@drawable/ic_details_black_24dp"
            android:title="@string/shopDetails" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

</menu>