<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/homeLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HomeLbl"
        android:background="@color/tvColor"
        android:padding="8dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="12dp"/>
    <TextView
        android:id="@+id/itemsLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ItemsLbl"
        android:background="@color/tvColor"
        android:padding="8dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="12dp"/>
    <TextView
        android:id="@+id/ordersLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OrdersLbl"
        android:background="@color/tvColor"
        android:padding="8dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="12dp"/>
    <TextView
        android:id="@+id/accountsLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AccountsLbl"
        android:background="@color/tvColor"
        android:padding="8dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="12dp"/>
    <TextView
        android:id="@+id/notificationsLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NotificationsLbl"
        android:background="@color/tvColor"
        android:padding="8dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="12dp"/>
    <TextView
        android:id="@+id/historyLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HistoryLbl"
        android:background="@color/tvColor"
        android:padding="8dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="12dp"/>
</LinearLayout>